--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
