edit the DB connection
modified the DB connection URL and some connection configuration in the server

--- a/backend/SocialMedia/.env
+++ b/backend/SocialMedia/.env
@@ -1,7 +1,6 @@
 # MongoDB URIs
 #MONGO_URI_LOCAL=mongodb://localhost:27017/socialdb
-MONGO_URI_REMOTE=mongodb+srv://ahmedsamy:ah123456789ah@cluster0.woqpp0t.mongodb.net/social?retryWrites=true&w=majority&appName=Cluster0
-# Port for the server to listen on
+MONGO_URI_REMOTE= mongodb+srv://ahmedsamy:ah123456789ah@travilio.dv55slf.mongodb.net/social?retryWrites=true&w=majority&appName=Travilio
 PORT=3002
 
 # JWT Secret Key
