--- a/backend/Challenge/challengProfile/src/main/resources/application.properties
+++ b/backend/Challenge/challengProfile/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.auto-index-creation=true
 server.port=11169
+spring.web.resources.static-locations=classpath:/static/
