Flight Booking & Hotels (Backend)
the flight booking part has been completed users can book the flight they desire and it will be saved as part of the trip. The backend to get hotels is complete

--- a/backend/Trip/.env
+++ b/backend/Trip/.env
@@ -1,6 +1,6 @@
 # MongoDB URIs
-MONGO_URI_LOCAL=mongodb://localhost:27017/coursesdb
-MONGO_URI_REMOTE=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/users?retryWrites=true&w=majority&appName=Travelio
+MONGO_URI_LOCAL=mongodb://localhost:27017/tripdb
+MONGO_URI_REMOTE=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/trip?retryWrites=true&w=majority&appName=Travelio
 
 # Port for the server to listen on
 PORT=3003
