--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -15,10 +15,12 @@
     "customize-cra": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.11",
+    "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-open-weather": "^1.3.6",
     "react-open-weather-widget": "^1.1.0",
     "react-router-dom": "^6.22.3",
