--- a/backend/pointsManagement/src/main/resources/application.properties
+++ b/backend/pointsManagement/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=pointsManagement
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
+spring.data.mongodb.database=Achievments
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
+server.port=11130
