--- a/backend/Challenge/challengProfile/src/main/resources/application.properties
+++ b/backend/Challenge/challengProfile/src/main/resources/application.properties
@@ -1,10 +1,4 @@
 spring.application.name=challengProfile
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
-spring.data.mongodb.database=Challenge
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
-spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.uri=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/challenge?retryWrites=true&w=majority&appName=Travelio
 server.port=11169
 spring.web.resources.static-locations=classpath:/static/
