--- a/backend/achievement/src/main/resources/application.properties
+++ b/backend/achievement/src/main/resources/application.properties
@@ -1,9 +1,3 @@
 spring.application.name=achievement
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
-spring.data.mongodb.database=Achievments
-spring.data.mongodb.port=27017
-spring.data.mongodb.host=localhost
-spring.data.mongodb.auto-index-creation=true
+sspring.data.mongodb.uri=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/achievement?retryWrites=true&w=majority&appName=Travelio
 server.port=9090
