--- a/backend/notification/src/main/resources/application.properties
+++ b/backend/notification/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=notification
 spring.data.mongodb.uri=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/notification?retryWrites=true&w=majority&appName=Travelio
+server.port=8080
