--- a/backend/Payment/.env
+++ b/backend/Payment/.env
@@ -1,5 +1,5 @@
 # MongoDB URIs
-MONGO_URI_LOCAL=mongodb://localhost:27017/coursesdb
+MONGO_URI_LOCAL=mongodb://localhost:27017/paymentdb
 MONGO_URI_REMOTE=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/payment?retryWrites=true&w=majority&appName=Travelio
 
 # Port for the server to listen on
