--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@daniel-szulc/react-weather-widget": "^1.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.13",
@@ -12,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "customize-cra": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.11",
@@ -23,11 +23,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-leaflet": "^4.2.1",
-    "react-open-weather": "^1.3.6",
-    "react-open-weather-widget": "^1.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "weather-icons-react": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
