--- a/backend_node/.env
+++ b/backend_node/.env
@@ -1,6 +1,6 @@
 # MongoDB URIs
 MONGO_URI_LOCAL=mongodb://localhost:27017/
-MONGO_URI_REMOTE=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/?retryWrites=true&w=majority&appName=Travelio
+MONGO_URI_REMOTE=mongodb+srv://aemoein:ae123%40ae@travelio.gb2iom0.mongodb.net/travelio?retryWrites=true&w=majority&appName=Travelio
 
 # Port for the server to listen on
 PORT=7777
