--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.11.1'
+          node-version: '18'  # Specify your Node.js version
 
       - name: Install dependencies
         run: |
@@ -28,9 +28,12 @@ jobs:
           cd backend_node
           npm run build
 
+      - name: Install Railway CLI
+        run: npm install -g railway
+
       - name: Deploy to Railway
-        uses: railwayapp/railway-action@v1
-        with:
-          railway-project-id: ${{ secrets.RAILWAY_PROJECT_ID }}
-          railway-token: ${{ secrets.RAILWAY_TOKEN }}
-          deploy-command: "cd backend_node && npm start"
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        run: |
+          cd backend_node
+          railway up --yes
