--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,23 +13,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'  # Specify your Node.js version
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Install dependencies
+      - name: Build Docker image
         run: |
-          cd backend_node
-          rm -rf node_modules
-          npm install
+          docker build -t your-image-name:latest -f backend_node/Dockerfile backend_node
 
-      - name: Install Railway CLI
+      - name: Log in to Railway
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
         env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_PROJECT_ID }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
         run: |
-          cd backend_node
-          railway up --service Travelio
+          railway login --token $RAILWAY_TOKEN
+          railway up --project $RAILWAY_PROJECT_ID --service Travelio
