--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           docker build -t your-image-name:latest -f backend_node/Dockerfile backend_node
 
-      - name: Log in to Railway
+      - name: Install Railway CLI
         run: npm install -g @railway/cli
 
       - name: Deploy to Railway
@@ -28,5 +28,5 @@ jobs:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
           RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
         run: |
-          railway login --token $RAILWAY_TOKEN
+          echo $RAILWAY_TOKEN | railway login
           railway up --project $RAILWAY_PROJECT_ID --service Travelio
