env for hosts in urls

--- a/backend_node/.env
+++ b/backend_node/.env
@@ -21,3 +21,9 @@ ACCESS_TOKEN=qvsnlN7n2OT1ooFBMtS0vz1wq3nb
 CLIENT_ID=KJcf4aGewF0G3fF32fRIrGNWVVFRL20z
 CLIENT_SECRET=qgXGYxrthINKKz83
 GOOGLE_API_KEY=AIzaSyA92-YGwUSmDHFjldbLlXysT0F2VAhEzOI
+
+#https://travelio-production.up.railway.app
+HOST=http://localhost:8080
+
+#https://travelio-gold.vercel.app
+FRONTEND=http://localhost:3000
