--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "customize-cra": "^1.0.0",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.11",
     "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^8.0.0",
@@ -22,10 +23,15 @@
     "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
+    "react-helmet": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-social-login": "^3.4.17",
+    "react-social-login-buttons": "^4.1.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
