--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,9 @@
 name: Deploy to Railway
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -13,6 +15,20 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Cache Node.js dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            backend_node/node_modules
+          key: node-${{ hashFiles('backend_node/package-lock.json') }}
+          restore-keys: |
+            node-
+
+      - name: Install Node.js dependencies
+        run: |
+          cd backend_node
+          npm install
 
       - name: Build Docker image
         run: |
