--- a/backend_node/.env
+++ b/backend_node/.env
@@ -27,3 +27,7 @@ HOST=http://localhost:8080
 
 #https://travelio-gold.vercel.app
 FRONTEND=http://localhost:3000
+
+REDIS_URL=redis://default:g2lMmUnz0QSbLWRAABsBiEGSaQvVLg9Z@redis-18691.c339.eu-west-3-1.ec2.redns.redis-cloud.com:18691
+
+NODE_ENV=development
