--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -27,7 +27,7 @@
     "react-helmet": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-social-login": "^3.4.17",
     "react-social-login-buttons": "^4.1.0",
     "web-vitals": "^2.1.4",
