--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,19 +44,19 @@ jobs:
           REDIS_URL: ${{ secrets.REDIS_URL }}
         run: |
           docker buildx build \
-            --build-arg MONGO_URI_REMOTE=${{ secrets.MONGO_URI_REMOTE }} \
-            --build-arg JWT_SECRET=${{ secrets.JWT_SECRET }} \
-            --build-arg STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }} \
-            --build-arg CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }} \
-            --build-arg CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }} \
-            --build-arg CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }} \
-            --build-arg ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }} \
-            --build-arg CLIENT_ID=${{ secrets.CLIENT_ID }} \
-            --build-arg CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
-            --build-arg GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} \
-            --build-arg HOST=${{ secrets.HOST }} \
-            --build-arg FRONTEND=${{ secrets.FRONTEND }} \
-            --build-arg REDIS_URL=${{ secrets.REDIS_URL }} \
+            --build-arg MONGO_URI_REMOTE=${MONGO_URI_REMOTE} \
+            --build-arg JWT_SECRET=${JWT_SECRET} \
+            --build-arg STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY} \
+            --build-arg CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY} \
+            --build-arg CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET} \
+            --build-arg CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME} \
+            --build-arg ACCESS_TOKEN=${ACCESS_TOKEN} \
+            --build-arg CLIENT_ID=${CLIENT_ID} \
+            --build-arg CLIENT_SECRET=${CLIENT_SECRET} \
+            --build-arg GOOGLE_API_KEY=${GOOGLE_API_KEY} \
+            --build-arg HOST=${HOST} \
+            --build-arg FRONTEND=${FRONTEND} \
+            --build-arg REDIS_URL=${REDIS_URL} \
             -t your-image-name:latest \
             -f backend_node/Dockerfile \
             backend_node
